Add menu for mouse sensitivity and strafe bot settings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ features = [
     'HtmlDivElement',
     'HtmlElement',
     'HtmlInputElement',
+    'HtmlSelectElement',
     'KeyboardEvent',
     'MouseEvent',
     'Node',
