--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ cgmath = {version="0.17", features=["swizzle"]}
 console_error_panic_hook = "0.1"
 js-sys = "0.3"
 rand = {version="0.7", features=["wasm-bindgen"]}
+serde = {version="1.0", features=["derive"]}
+serde_json = "1.0"
 wasm-bindgen = "0.2"
 
 [dependencies.web-sys]
@@ -33,6 +35,7 @@ features = [
     'MouseEvent',
     'Node',
     'Performance',
+    'Storage',
     'WebGlActiveInfo',
     'WebGlBuffer',
     'WebGlProgram',
